src/objects/cb5__CBTask__c.object
<CustomObject>
    <fields>
        <fullName>cb5__CBTaskQueue__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CB Task Queue</label>
        <referenceTo>cb5__CBTaskQueue__c</referenceTo>
        <relationshipLabel>CB Tasks</relationshipLabel>
        <relationshipName>CB_Tasks</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__ClassName__c</fullName>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__OrderNumber__c</fullName>
        <label>OrderNumber</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cb5__Parameter1__c</fullName>
        <label>Parameter 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__Parameter2__c</fullName>
        <label>Parameter 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__QueueName__c</fullName>
        <formula>cb5__CBTaskQueue__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Queue Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Idle</fullName>
                    <default>true</default>
                    <label>Idle</label>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CB Task</label>
    <nameField>
        <label>CBTask Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>